// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EthereumSig > should create cancelProposal envelope 1`] = `
{
  "data": {
    "proposal": "0x56b857b02d573b0ba747333b57cb3dd11df57cc0d1bcc41c3c990466b477c5e8",
    "space": "test.eth",
  },
  "signatureData": {
    "address": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
    "domain": {
      "name": "snapshot",
      "version": "0.1.4",
    },
    "message": {
      "from": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
      "proposal": "0x56b857b02d573b0ba747333b57cb3dd11df57cc0d1bcc41c3c990466b477c5e8",
      "space": "test.eth",
      "timestamp": 1705795200,
    },
    "signature": "0xe358de8e39c6c0cc9df929892e61806371e6539199a2b0781b9100700760067334024ca8cd5f86f1cb16fc93e76602989618eeacebf1fafbc1acad882d14b4d61c",
    "types": {
      "CancelProposal": [
        {
          "name": "from",
          "type": "address",
        },
        {
          "name": "space",
          "type": "string",
        },
        {
          "name": "timestamp",
          "type": "uint64",
        },
        {
          "name": "proposal",
          "type": "bytes32",
        },
      ],
    },
  },
}
`;

exports[`EthereumSig > should create propose envelope 1`] = `
{
  "data": {
    "app": "snapshot-v2",
    "body": "Dummy body",
    "choices": [
      "For",
      "Against",
      "Abstain",
    ],
    "discussion": "https://snapshot.org",
    "end": 1705798800,
    "labels": [
      "1234e",
    ],
    "plugins": "{}",
    "privacy": "shutter",
    "snapshot": 19283932,
    "space": "wan-test.eth",
    "start": 1705795200,
    "title": "Creation test",
    "type": "basic",
  },
  "signatureData": {
    "address": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
    "domain": {
      "name": "snapshot",
      "version": "0.1.4",
    },
    "message": {
      "app": "snapshot-v2",
      "body": "Dummy body",
      "choices": [
        "For",
        "Against",
        "Abstain",
      ],
      "discussion": "https://snapshot.org",
      "end": 1705798800,
      "from": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
      "labels": [
        "1234e",
      ],
      "plugins": "{}",
      "privacy": "shutter",
      "snapshot": 19283932,
      "space": "wan-test.eth",
      "start": 1705795200,
      "timestamp": 1705795200,
      "title": "Creation test",
      "type": "basic",
    },
    "signature": "0x810f135b210282a6933fd86850f7b36c031aaaf9cc580d339f9fba94efbf9ea564c9d612e9de87397dbf45ce97697bfa00b35d327beb78b77d042e13fec5806d1b",
    "types": {
      "Proposal": [
        {
          "name": "from",
          "type": "address",
        },
        {
          "name": "space",
          "type": "string",
        },
        {
          "name": "timestamp",
          "type": "uint64",
        },
        {
          "name": "type",
          "type": "string",
        },
        {
          "name": "title",
          "type": "string",
        },
        {
          "name": "body",
          "type": "string",
        },
        {
          "name": "discussion",
          "type": "string",
        },
        {
          "name": "choices",
          "type": "string[]",
        },
        {
          "name": "labels",
          "type": "string[]",
        },
        {
          "name": "start",
          "type": "uint64",
        },
        {
          "name": "end",
          "type": "uint64",
        },
        {
          "name": "snapshot",
          "type": "uint64",
        },
        {
          "name": "plugins",
          "type": "string",
        },
        {
          "name": "privacy",
          "type": "string",
        },
        {
          "name": "app",
          "type": "string",
        },
      ],
    },
  },
}
`;

exports[`EthereumSig > should create vote envelope 1`] = `
{
  "data": {
    "app": "snapshot-v2",
    "authenticator": "",
    "choice": 1,
    "metadataUri": "",
    "proposal": "0xcc47146e5e0ac781e8976405a8da4468f2a0c4cdf0c7659353d728fafe46f801",
    "space": "wan-test.eth",
    "strategies": [],
    "type": "basic",
  },
  "signatureData": {
    "address": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
    "domain": {
      "name": "snapshot",
      "version": "0.1.4",
    },
    "message": {
      "app": "snapshot-v2",
      "choice": 1,
      "from": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
      "metadata": "",
      "proposal": "0xcc47146e5e0ac781e8976405a8da4468f2a0c4cdf0c7659353d728fafe46f801",
      "reason": "",
      "space": "wan-test.eth",
      "timestamp": 1705795200,
    },
    "signature": "0x92df2e1de71e2f0cdf04d7fd5d028fe0d38b990aa896ad677c4627bfd303cd386b17ad4c403dade15f2508b5fa444d2e8b4b1bed8ca63d341006a4d5d2e64bac1b",
    "types": {
      "Vote": [
        {
          "name": "from",
          "type": "address",
        },
        {
          "name": "space",
          "type": "string",
        },
        {
          "name": "timestamp",
          "type": "uint64",
        },
        {
          "name": "proposal",
          "type": "string",
        },
        {
          "name": "choice",
          "type": "uint32",
        },
        {
          "name": "reason",
          "type": "string",
        },
        {
          "name": "app",
          "type": "string",
        },
        {
          "name": "metadata",
          "type": "string",
        },
      ],
    },
  },
}
`;
